# NvidianMatters

./: README.md  helloworld.cu
conv/: CMakeLists.txt  INFO.txt  Report.odt  Report.pdf[1]  best_cpu.cu  clock.h  collect_data.sh  compile.sh  generate_graphs.py  kernel1.cu  kernel2.cu  kernel3.cu  kernel4.cu  kernel5.cu  kernels.h  main  main.cu  pgm.cu  pgm.h  pgm_creator.cu  tests.cu
conv/googletest/: CONTRIBUTING.md  README.md  library.json
conv/googletest/googlemock/docs/: cheat_sheet.md
conv/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-function-mocker.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-generated-matchers.h  gmock-generated-matchers.h.pump  gmock-matchers.h
conv/googletest/googlemock/scripts/: pump.py  upload.py
conv/googletest/googlemock/src/: gmock-spec-builders.cc
conv/googletest/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc
conv/googletest/googletest/: CMakeLists.txt  README.md
conv/googletest/googletest/docs/: advanced.md  primer.md
conv/googletest/googletest/include/gtest/: gtest-matchers.h  gtest-param-test.h  gtest-typed-test.h  gtest.h
conv/googletest/googletest/scripts/: gen_gtest_pred_impl.py
conv/googletest/googletest/src/: gtest.cc
conv/googletest/googletest/test/: BUILD.bazel  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-printers-test.cc  gtest_unittest.cc
conv/outputs/: c.txt  l.txt  m.txt  pixel.txt  r.txt  s.txt  square.txt  tall.txt  wide.txt
(+17 files in other folders)
